<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cjbarton.maintenancelog.Oil"
    android:orientation="vertical">


        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mileage"
            android:id="@+id/tvMileage" />

        <EditText
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@+id/tvMileage"
            android:id="@+id/etMileage"
            android:inputType="text" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oilFilter"
            android:id="@+id/oilFilter" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cabinFilter"
            android:id="@+id/cabinFilter" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brakePads"
            android:id="@+id/brakePads" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brakeRotors"
            android:id="@+id/brakeRotors" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/breakContact"
            android:id="@+id/breakContact" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greaseHubs"
            android:id="@+id/greaseHubs" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parkingBrake"
            android:id="@+id/parkingBrake" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetSIL"
            android:id="@+id/resetSIL" />



    </LinearLayout>
