<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity" >


            <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvR50"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvR50"
                android:text="@string/oilBtn"
                android:id="@+id/oilServiceBtn"
                android:paddingTop="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="10dp"
                android:clickable="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/oilServiceBtn"
                android:text="@string/inspection1"
                android:id="@+id/inspection1btn"
                android:paddingTop="10dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="10dp"
                android:clickable="true"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inspection1btn"
                android:text="@string/inspection2"
                android:id="@+id/inspection2btn"
                android:paddingTop="10dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="10dp"
                android:clickable="true"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inspection2btn"
                android:text="@string/sil"
                android:id="@+id/silBtn"
                android:paddingTop="10dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="10dp"
                android:clickable="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/silBtn"
                android:text="@string/maint_table"
                android:id="@+id/maint_table"
                android:paddingTop="10dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="10dp"
                android:clickable="true" />


</RelativeLayout>
